--- a/views/author.ejs
+++ b/views/author.ejs
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class="image">
-                        <img src="images/Line.png" alt="" style="margin-top: 15px; margin-bottom: 5px;">
+                        <img src="images/Line.png" alt="" style="margin-top: 10px; margin-bottom: 5px;">
                     </div>
                     <div class="left_3_lang">
                         <div class="bangla" style="font-family: sans-serif; color: var(--Paragraph-Font, #767676);">English</div>
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                     <div class="image">
-                        <img src="images/Line1.png" alt="" style="margin-top: 15px; margin-bottom: 5px;">
+                        <img src="images/Line1.png" alt="" style="margin-top: 10px; margin-bottom: 5px;">
                     </div>
                     <div class="left_3_lang">
                         <div class="bangla" style="font-family: sans-serif; color: var(--Paragraph-Font, #767676);">Spanish</div>
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="image">
-                        <img src="images/Line2.png" alt="" style="margin-top: 15px; margin-bottom: 5px;">
+                        <img src="images/Line2.png" alt="" style="margin-top: 10px; margin-bottom: 5px;">
                     </div>
                 </div>
                 <div class="marginer"></div>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="images/html.png" alt="" style="margin-bottom: 15px;">
+                        <img src="images/html.png" alt="" style="margin-bottom: 10px; margin-top: 5px;">
                     </div>
 
                     <div class="left_4_skills">
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="images/css.png" alt="" style="margin-bottom: 15px;">
+                        <img src="images/css.png" alt="" style="margin-bottom: 10px; margin-top: 5px;">
                     </div>
                     
                     <div class="left_4_skills">
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="images/js.png" alt="" style="margin-bottom: 15px;">
+                        <img src="images/js.png" alt="" style="margin-bottom: 10px; margin-top: 5px;">
                     </div>
 
                     <div class="left_4_skills">
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="images/php.png" alt="" style="margin-bottom: 15px;">
+                        <img src="images/php.png" alt="" style="margin-bottom: 10px; margin-top: 5px;">
                     </div>
 
                     <div class="left_4_skills">
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="images/wordpress.png" alt="" style="margin-bottom: 15px;">
+                        <img src="images/wordpress.png" alt="" style="margin-bottom: 10px; margin-top: 5px;">
                     </div>
 
                 </div>
@@ -216,19 +216,33 @@
             <!-- Mid frame start -->
             <div class="midd_frame">
                 <div class="midd_frame_top">
-                    <div class="top_left">
-                        <div class="boxes">
-                            <div class="box_1">
-                                Doctor neurologists in OHSU Hospital
-                            </div>
-                            <div class="box_2">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, volutpat feugiat placerat lobortis. Natoque rutrum semper sed suspendisse nunc lectus.
-                            </div>
-                            <div class="yellow_box">
-                              <div class="hire_me">HIRE ME <img src="icon/hireme.png" alt=""></div>
-                            </div>
-                        </div>
+                    <div class="shape">
+                      <div class="yellow1"></div>
+                      <div class="green1"></div>
+                      <div class="blue1"></div>
+                      <div class="green2"></div>
+                      <div class="yellow2"></div>
+                      <div class="yellow3"></div>
+                      <div class="red"><img src="images/triangle.png" alt=""></div>
+
+
+
+                      
+
                     </div>
+                    <div class="mid-left">
+                       <div class="text_1">
+                      <h1> Doctor neurologists in OHSU Hospital</h1>
+                    </div>
+                       <div class="text_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, volutpat feugiat placerat lobortis. Natoque rutrum semper sed suspendisse nunc lectus.</div>
+                        <button>HIRE ME <img src="images/1arrow.png" alt="" style="margin-left: 5px;"></button>
+
+                    </div>
+                   <div class="mid-right">
+                    <div class="image_box">
+                        <img src="images/man.png" alt="">
+                    </div>
+                   </div>
                 </div>
                 <div class="letters">
                     <div class="letter_1">My Services</div>
@@ -271,21 +285,17 @@
                         <div class="image_box">
                          <img src="images/ptp.png" alt="">
                          <div class="content_desc"><strong>Photography</strong></div>
-                         <span style="font-family: sans-serif;">Portrait, product photography</span>
+                         <span style="font-size: 11.5px">Portrait, product Photography</span>
                         </div>
                      </div>
 
                      <div class="content_1" style="margin-top: 30px;"> 
                         <div class="image_box">
-                         <div class="content_desc" style="margin-bottom:"><strong>Advertising</strong></div>
+                         <div class="content_desc"><strong>Advertising</strong></div>
                          <span style="font-family: sans-serif; width: 260px; height: 78px; margin-bottom: 10px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae nulla diam in ac dictum a urna viverra morbi.</span>
-                         <span style="color: var(--Yellow, #FFB400);
-                         font-family: sans-serif;
-                         font-size: 12px;
-                         font-style: normal;
-                         font-weight: 700;
-                         line-height: normal; margin-bottom: 40px;">Order now
-                        </span>
+                        <div class="last_arrow">
+                            <div>ORDER NOW <img src="images/lastarrow.png" alt=""></div>
+                        </div>
                         </div>
                      </div>
                 </div>
