feat: Task-A is solved in here!

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -206,7 +206,7 @@
                         <div class="left_5_img">
                             <img src="icon/icon5.png" alt="">
                         </div>
-                        <div class="left_5_words">GiT Knowledge</div>
+                        <div class="left_5_words">GIT Knowledge</div>
                     </div>
                 </div>
                 <div class="marginer"></div>
