--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -22,7 +22,7 @@
                     type="text"
                     style="flex: 1"
                     />
-                    <button class="btn btn-primary" style="border-radius: 20px;">Add New Purchase</button>
+                    <button class="btn btn-primary" style="border-radius: 20px;">Add New Plan</button>
                 </div>
             </form>
         </div>
