--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -15,7 +15,7 @@
                 <div class="d-flex justify-content-center">
                     <input
                     id="create-field"
-                    name="item"
+                    name="reja"
                     autofocus
                     autocomplete="off"
                     class="form-control mr-3"
@@ -26,6 +26,28 @@
                 </div>
             </form>
         </div>
+
+       
+
+        <ul id="item-list" class="list-group pb-5">
+
+            <% items.map(function(item) { %>
+                <li 
+                class="list-group-item list-group-item-info d-flex
+                align-items-center justify-content-between">
+                <span class="text"><%=item.reja%></span>
+                <div>
+                    <button data-id="<%=item._id %>" class="edit-me btn btn-secondary btn-sm mr-1">
+                        Edit
+                    </button>
+                    <button data-id="<%=item._id %>" class="delete-me btn btn-danger btn-sm">Delete</button>
+                    </div>
+                </li>
+           <% }) %>
+
+         
+        </ul>
+
        <div> <button class="btn btn-primary" style="border-radius: 20px; margin-top: 5px; background-color: red;">Delete All</button>
        </div>
     </div>
