--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -45,11 +45,14 @@
                 </li>
            <% }) %>
 
-         
         </ul>
 
        <div> <button class="btn btn-primary" style="border-radius: 20px; margin-top: 5px; background-color: red;">Delete All</button>
        </div>
     </div>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
+
 </body>
 </html>
