feat: reja: final step completion

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -47,7 +47,9 @@
 
         </ul>
 
-       <div> <button class="btn btn-primary" style="border-radius: 20px; margin-top: 5px; background-color: red;">Delete All</button>
+       <div> <button id="clean-all" class="btn btn-primary" 
+        style="border-radius: 20px; margin-top: 5px; 
+        background-color: red;">Delete All</button>
        </div>
     </div>
 
